<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.opencgl</groupId>
    <artifactId>OpenCGL_New</artifactId>
    <version>1.0-SNAPSHOT</version>


    <properties>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <software-version>2.1.1</software-version>
    </properties>
    <profiles>
        <profile>
            <id>windows</id>
            <properties>
                <icon-name>icon.ico</icon-name>
                <package-type>exe</package-type>
                <package-args>--win-per-user-install --win-dir-chooser --win-menu  --win-shortcut --win-shortcut-prompt --install-dir OpenCGL</package-args>
            </properties>
            <activation>
                <!-- 设置默认激活这个配置 -->
                <activeByDefault>true</activeByDefault>
            </activation>
        </profile>
        <profile>
            <id>mac</id>
            <properties>
                <icon-name>mac-icon.icns</icon-name>
                <package-type>dmg</package-type>
                <package-args/>
            </properties>
        </profile>
        <profile>
            <id>linux</id>
            <properties>
                <icon-name>icon.ico</icon-name>
                <package-type>rpm</package-type>
                <package-args/>
            </properties>
        </profile>
    </profiles>


    <dependencies>
        <!--javafx套件-->
        <dependency>
            <groupId>io.github.palexdev</groupId>
            <artifactId>materialfx</artifactId>
            <version>11.17.0</version>
        </dependency>
        <dependency>
            <groupId>fr.brouillard.oss</groupId>
            <artifactId>cssfx</artifactId>
            <version>11.5.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-javafx</artifactId>
            <version>12.3.1</version>
        </dependency>
        <dependency>
            <groupId>org.kordamp.ikonli</groupId>
            <artifactId>ikonli-fontawesome5-pack</artifactId>
            <version>12.3.1</version>
        </dependency>

        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-graphics</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-web</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-base</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>21-ea+24</version>
        </dependency>
        <!--fastJson-->
        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>2.0.32</version>
        </dependency>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.30</version>
        </dependency>
        <dependency>
            <groupId>commons-io</groupId>
            <artifactId>commons-io</artifactId>
            <version>2.6</version>
        </dependency>
        <dependency>
            <groupId>commons-lang</groupId>
            <artifactId>commons-lang</artifactId>
            <version>2.6</version>
        </dependency>

        <!-- slf log -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.6</version>
        </dependency>
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.2.11</version>
        </dependency>

        <!--sqllite连接驱动-->
        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.46.0.0</version>
        </dependency>

        <dependency>
            <groupId>com.alibaba</groupId>
            <artifactId>fastjson</artifactId>
            <version>2.0.32</version>
        </dependency>
        <dependency>
            <groupId>commons-collections</groupId>
            <artifactId>commons-collections</artifactId>
            <version>3.2.2</version>
        </dependency>
        <dependency>
            <groupId>com.vladsch.flexmark</groupId>
            <artifactId>flexmark-all</artifactId>
            <version>0.42.14</version>
        </dependency>
        <dependency>
            <groupId>OpenCGL-Plugin</groupId>
            <artifactId>PluginApiModule</artifactId>
            <version>1.0.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.1</version>
                <configuration>
                    <optimize>true</optimize>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.4.1</version>
                <configuration>
                    <finalName>OpenCGL</finalName>
                    <archive>
                        <!--生成的jar中，不要包含pom.xml和pom.properties这两个文件 -->
                        <addMavenDescriptor>false</addMavenDescriptor>
                        <manifest>
                            <!--运行jar包时运行的主类，要求类全名-->
                            <mainClass>com.opencgl.OpenCglStartApplication</mainClass>

                            <!-- 是否指定项目classpath下的依赖 -->
                            <addClasspath>true</addClasspath>
                            <!-- 指定依赖的时候声明前缀 -->
                            <classpathPrefix>./lib/</classpathPrefix>
                            <useUniqueVersions>false</useUniqueVersions>
                        </manifest>
                    </archive>
                    <excludes>
                        <exclude>${project.basedir}/conf/</exclude>
                    </excludes>
                </configuration>
            </plugin>
            <!--把当前项目所有的依赖打包到target目录下的lib文件夹下-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>2.8</version>
                <executions>
                    <execution>
                        <id>copy</id>
                        <phase>package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <!--已存在的Release版本不重复copy-->
                            <overWriteReleases>false</overWriteReleases>
                            <!--已存在的SnapShot版本不重复copy-->
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <!--不存在或者有更新版本的依赖才copy-->
                            <overWriteIfNewer>false</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-antrun-plugin</artifactId>
                <version>3.1.0</version>
                <dependencies>
                    <dependency>
                        <groupId>org.apache.ant</groupId>
                        <artifactId>ant</artifactId>
                        <version>1.10.12</version>
                    </dependency>
                </dependencies>
                <executions>
                    <execution>
                        <id>generate-jre-application</id>
                        <phase>package</phase>
                        <goals>
                            <goal>run</goal>
                        </goals>
                        <configuration>
                            <target>

                                <!-- 步骤1：收集 lib 目录下所有 Jar 文件（解析 *.jar 通配符） -->
                                <fileset id="lib.jars" dir="${project.build.directory}${file.separator}lib" includes="**/*.jar"/> <!-- 匹配 lib 下所有 Jar（包括子目录，若有） -->

                                <!-- 步骤2：将 Jar 文件列表转换为「空格分隔的路径字符串」（供 jdeps 使用） -->
                                <pathconvert property="jar.paths" refid="lib.jars" pathsep=" ">
                                    <!-- 可选：若路径含空格，给每个路径加引号（避免解析错误） -->
                                    <mapper type="regexp" from="(.*\.jar)" to="&quot;\1&quot;"/>
                                </pathconvert>
                                <echo message="检索到的模块： ${jar.paths}"/>
<!--                                <echo message="模块： ${jar.paths}"/>-->
                                <!-- 用jdeps分析模块 -->
                                <exec executable="${java.home}${file.separator}bin${file.separator}jdeps" outputproperty="module.deps">
                                    <arg line="-q --multi-release 21"/>
                                    <arg line="--ignore-missing-deps"/>
                                    <arg line="--print-module-deps ${jar.paths} ${project.build.directory}${file.separator}OpenCGL.jar"/>
                                </exec>
                                <echo message="echo 依赖的 Java 模块： ${module.deps}"/>

                                <exec executable="${java.home}${file.separator}bin${file.separator}jlink">
                                    <arg line="--module-path ${java.home}${file.separator}jmods"/>
                                    <arg line="--add-modules ${module.deps}"/>
                                    <arg line="--output ${project.build.directory}${file.separator}custom-jre"/>
                                    <arg line="--strip-debug --no-man-pages --no-header-files --compress=2"/>
                                </exec>

                                <copy todir="${project.build.directory}${file.separator}package-output${file.separator}lib">
                                    <fileset dir="${project.build.directory}${file.separator}lib" includes="**/*"/>
                                </copy>
                                <copy todir="${project.build.directory}${file.separator}package-output">
                                    <fileset dir="${project.build.directory}${file.separator}" includes="**/OpenCGL.jar"/>
                                </copy>

                                <exec executable="${java.home}${file.separator}bin${file.separator}jpackage">
                                    <arg line="--type ${package-type}"/>
                                    <arg line="--main-jar OpenCGL.jar"/>
                                    <arg line="--name OpenCGL-Tool"/>
                                    <arg line="--icon ${project.build.outputDirectory}${file.separator}com${file.separator}opencgl${file.separator}icon${file.separator}${icon-name}"/>
                                    <arg line="--app-version ${software-version}"/>
                                    <arg line="--vendor Chance.W"/>
                                    <arg line="-i ${project.build.directory}${file.separator}package-output"/>
                                    <arg line="--dest ${project.build.directory}"/>
                                    <arg line="--main-class com.opencgl.OpenCglStartApplication"/>
                                    <arg line="--verbose ${package-args}"/>
                                    <arg line="--runtime-image ${project.build.directory}${file.separator}custom-jre"/>
                                </exec>
                            </target>
                        </configuration>
                    </execution>
                </executions>
            </plugin>

            <!--含依赖，但不包含jre的完整jar包，需要结合jdk使用-->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-assembly-plugin</artifactId>
                <version>2.5.5</version>
                <configuration>
                    <finalName>OpenCGL-Single</finalName>
                    <appendAssemblyId>false</appendAssemblyId>
                    <encoding>utf-8</encoding>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <mainClass>com.opencgl.OpenCglStartApplication</mainClass>
                        </manifest>
                    </archive>
                    <descriptorRefs>
                        <descriptorRef>jar-with-dependencies</descriptorRef>
                    </descriptorRefs>
                </configuration>
                <executions>
                    <execution>
                        <id>make-assembly</id>
                        <phase>package</phase>
                        <goals>
                            <goal>single</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>